# clogger

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  clogger.c  clogger.h
include/: clogger.h
src/: clogger.c
